[gd_scene load_steps=18 format=3 uid="uid://dvvtj6x6hcber"]

[ext_resource type="Theme" uid="uid://jn71302gkvqy" path="res://hud_theme.tres" id="1_5x1fi"]
[ext_resource type="Script" uid="uid://dyxsjxpvsie0m" path="res://Model/shop.gd" id="2_ei2gw"]
[ext_resource type="Texture2D" uid="uid://cqwsm3uxbo3v1" path="res://assets/shop/shop_background.png" id="3_0mlmv"]
[ext_resource type="FontFile" uid="uid://cpy65047eb1jb" path="res://font/Minecraftia-Regular.ttf" id="4_o4j7t"]
[ext_resource type="Texture2D" uid="uid://tnma6odo0arh" path="res://assets/exit_button/exit_button.png" id="5_rn3ik"]
[ext_resource type="Texture2D" uid="uid://c60liaujyeegu" path="res://assets/exit_button/exit_button_click.png" id="6_tbl8w"]
[ext_resource type="Texture2D" uid="uid://ccgfp7p2mojhr" path="res://assets/exit_button/exit_button_hover.png" id="7_7ost5"]
[ext_resource type="Texture2D" uid="uid://cb3n5tipanuqn" path="res://assets/batiments/dortoir.png" id="8_pmug7"]
[ext_resource type="Texture2D" uid="uid://davnig7fybkhe" path="res://assets/shop/buy_button/buy_button.png" id="9_jxxyu"]
[ext_resource type="Texture2D" uid="uid://dlwdtu1jfb27b" path="res://assets/shop/buy_button/buy_button_click.png" id="10_hcqeq"]
[ext_resource type="Texture2D" uid="uid://ywwb41atcdfp" path="res://assets/shop/buy_button/buy_button_hover.png" id="11_f5aa6"]
[ext_resource type="Texture2D" uid="uid://lkj2kjfsbj6j" path="res://assets/batiments/cantine.png" id="12_i7rjl"]
[ext_resource type="Texture2D" uid="uid://2npxv53umor" path="res://assets/batiments/labo_recherche.png" id="13_3acnc"]
[ext_resource type="Texture2D" uid="uid://b3lckj5m6mvue" path="res://assets/batiments/salle_sport.png" id="14_mjjod"]
[ext_resource type="Texture2D" uid="uid://b4am8ut72ys4x" path="res://assets/batiments/salle_repos.png" id="15_cud4g"]
[ext_resource type="Texture2D" uid="uid://claecrp3ebw80" path="res://assets/batiments/observatoire.png" id="16_3acnc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mjjod"]
bg_color = Color(0.294118, 0.635294, 0.721569, 0.603922)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5x1fi")
script = ExtResource("2_ei2gw")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -673.25
offset_top = -950.0
offset_right = 673.25
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_0mlmv")

[node name="Options_text" type="RichTextLabel" parent="background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.15652633
anchor_right = 0.5
anchor_bottom = 0.15652633
offset_left = -388.0
offset_top = -35.700012
offset_right = 388.0
offset_bottom = 84.29999
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.5372549, 0.8117647, 0.9411765, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/normal_font = ExtResource("4_o4j7t")
bbcode_enabled = true
text = "[center][font_size=65]BOUTIQUE
"
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Exit_button" type="TextureButton" parent="background"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -129.0
offset_top = 46.0
offset_right = -54.5
offset_bottom = 120.5
grow_horizontal = 0
texture_normal = ExtResource("5_rn3ik")
texture_pressed = ExtResource("6_tbl8w")
texture_hover = ExtResource("7_7ost5")
stretch_mode = 0

[node name="ScrollContainer" type="ScrollContainer" parent="background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 122.25
offset_top = 326.0
offset_right = -134.25
offset_bottom = -133.0
grow_horizontal = 2
grow_vertical = 2

[node name="Batiments" type="GridContainer" parent="background/ScrollContainer"]
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 56
theme_override_constants/v_separation = 40
columns = 2

[node name="labo_recherche" type="VBoxContainer" parent="background/ScrollContainer/Batiments"]
custom_minimum_size = Vector2(510, 300)
layout_mode = 2
alignment = 1

[node name="separateur" type="ColorRect" parent="background/ScrollContainer/Batiments/labo_recherche"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Name_text" type="RichTextLabel" parent="background/ScrollContainer/Batiments/labo_recherche"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("4_o4j7t")
bbcode_enabled = true
text = "[center][font_size=48]Batiment"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="labo_recherche" type="TextureRect" parent="background/ScrollContainer/Batiments/labo_recherche"]
custom_minimum_size = Vector2(300, 220)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("13_3acnc")
stretch_mode = 6

[node name="Cost_text" type="RichTextLabel" parent="background/ScrollContainer/Batiments/labo_recherche"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0.8527348, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_o4j7t")
bbcode_enabled = true
text = "[center][font_size=48]10 000€"
fit_content = true

[node name="Buy_button" type="TextureButton" parent="background/ScrollContainer/Batiments/labo_recherche/Cost_text"]
layout_direction = 3
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
scale = Vector2(0.9, 0.9)
size_flags_horizontal = 4
texture_normal = ExtResource("9_jxxyu")
texture_pressed = ExtResource("10_hcqeq")
texture_hover = ExtResource("11_f5aa6")
stretch_mode = 0

[node name="labo_recherche_description" type="VBoxContainer" parent="background/ScrollContainer/Batiments"]
custom_minimum_size = Vector2(510, 300)
layout_mode = 2
alignment = 1

[node name="Backgournd" type="Panel" parent="background/ScrollContainer/Batiments/labo_recherche_description"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mjjod")
metadata/_edit_use_anchors_ = true

[node name="Description" type="RichTextLabel" parent="background/ScrollContainer/Batiments/labo_recherche_description/Backgournd"]
layout_mode = 0
offset_left = 28.0
offset_top = 5.0
offset_right = 489.0
offset_bottom = 390.0
bbcode_enabled = true
text = "[center][font_size=48]DESCRIPTION[/font_size]
[font_size=32]DESCRIPTION[/font_size]"

[node name="dortoir" type="VBoxContainer" parent="background/ScrollContainer/Batiments"]
custom_minimum_size = Vector2(510, 300)
layout_mode = 2
alignment = 1

[node name="separateur" type="ColorRect" parent="background/ScrollContainer/Batiments/dortoir"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Name_text" type="RichTextLabel" parent="background/ScrollContainer/Batiments/dortoir"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("4_o4j7t")
bbcode_enabled = true
text = "[center][font_size=48]Batiment"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="dortoir" type="TextureRect" parent="background/ScrollContainer/Batiments/dortoir"]
custom_minimum_size = Vector2(300, 220)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("8_pmug7")
stretch_mode = 6

[node name="Cost_text" type="RichTextLabel" parent="background/ScrollContainer/Batiments/dortoir"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0.8527348, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_o4j7t")
bbcode_enabled = true
text = "[center][font_size=48]10 000€"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Buy_button" type="TextureButton" parent="background/ScrollContainer/Batiments/dortoir/Cost_text"]
layout_direction = 3
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
scale = Vector2(0.9, 0.9)
size_flags_horizontal = 4
texture_normal = ExtResource("9_jxxyu")
texture_pressed = ExtResource("10_hcqeq")
texture_hover = ExtResource("11_f5aa6")
stretch_mode = 0

[node name="dortoir_description" type="VBoxContainer" parent="background/ScrollContainer/Batiments"]
custom_minimum_size = Vector2(510, 300)
layout_mode = 2
alignment = 1

[node name="Backgournd" type="Panel" parent="background/ScrollContainer/Batiments/dortoir_description"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mjjod")
metadata/_edit_use_anchors_ = true

[node name="Description" type="RichTextLabel" parent="background/ScrollContainer/Batiments/dortoir_description/Backgournd"]
layout_mode = 0
offset_left = 28.0
offset_top = 5.0
offset_right = 489.0
offset_bottom = 390.0
bbcode_enabled = true
text = "[center][font_size=48]DESCRIPTION[/font_size]
[font_size=32]DESCRIPTION[/font_size]"

[node name="cantine" type="VBoxContainer" parent="background/ScrollContainer/Batiments"]
custom_minimum_size = Vector2(510, 300)
layout_mode = 2
alignment = 1

[node name="separateur" type="ColorRect" parent="background/ScrollContainer/Batiments/cantine"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Name_text" type="RichTextLabel" parent="background/ScrollContainer/Batiments/cantine"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("4_o4j7t")
bbcode_enabled = true
text = "[center][font_size=48]Batiment"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="cantine" type="TextureRect" parent="background/ScrollContainer/Batiments/cantine"]
custom_minimum_size = Vector2(300, 220)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("12_i7rjl")
stretch_mode = 6

[node name="Cost_text" type="RichTextLabel" parent="background/ScrollContainer/Batiments/cantine"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0.8527348, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_o4j7t")
bbcode_enabled = true
text = "[center][font_size=48]10 000€"
fit_content = true

[node name="Buy_button" type="TextureButton" parent="background/ScrollContainer/Batiments/cantine/Cost_text"]
layout_direction = 3
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
scale = Vector2(0.9, 0.9)
size_flags_horizontal = 4
texture_normal = ExtResource("9_jxxyu")
texture_pressed = ExtResource("10_hcqeq")
texture_hover = ExtResource("11_f5aa6")
stretch_mode = 0

[node name="cantine_description" type="VBoxContainer" parent="background/ScrollContainer/Batiments"]
custom_minimum_size = Vector2(510, 300)
layout_mode = 2
alignment = 1

[node name="Backgournd" type="Panel" parent="background/ScrollContainer/Batiments/cantine_description"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mjjod")
metadata/_edit_use_anchors_ = true

[node name="Description" type="RichTextLabel" parent="background/ScrollContainer/Batiments/cantine_description/Backgournd"]
layout_mode = 0
offset_left = 28.0
offset_top = 5.0
offset_right = 489.0
offset_bottom = 390.0
bbcode_enabled = true
text = "[center][font_size=48]DESCRIPTION[/font_size]
[font_size=32]DESCRIPTION[/font_size]"

[node name="observatoire" type="VBoxContainer" parent="background/ScrollContainer/Batiments"]
custom_minimum_size = Vector2(510, 300)
layout_mode = 2
alignment = 1

[node name="separateur" type="ColorRect" parent="background/ScrollContainer/Batiments/observatoire"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Name_text" type="RichTextLabel" parent="background/ScrollContainer/Batiments/observatoire"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("4_o4j7t")
bbcode_enabled = true
text = "[center][font_size=48]Batiment"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="observatoire" type="TextureRect" parent="background/ScrollContainer/Batiments/observatoire"]
custom_minimum_size = Vector2(300, 290)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("16_3acnc")
stretch_mode = 6

[node name="Cost_text" type="RichTextLabel" parent="background/ScrollContainer/Batiments/observatoire"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0.8527348, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_o4j7t")
bbcode_enabled = true
text = "[center][font_size=48]10 000€"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Buy_button" type="TextureButton" parent="background/ScrollContainer/Batiments/observatoire/Cost_text"]
layout_direction = 3
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
scale = Vector2(0.9, 0.9)
size_flags_horizontal = 4
texture_normal = ExtResource("9_jxxyu")
texture_pressed = ExtResource("10_hcqeq")
texture_hover = ExtResource("11_f5aa6")
stretch_mode = 0

[node name="observatoire_description" type="VBoxContainer" parent="background/ScrollContainer/Batiments"]
custom_minimum_size = Vector2(510, 300)
layout_mode = 2
alignment = 1

[node name="Backgournd" type="Panel" parent="background/ScrollContainer/Batiments/observatoire_description"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mjjod")
metadata/_edit_use_anchors_ = true

[node name="Description" type="RichTextLabel" parent="background/ScrollContainer/Batiments/observatoire_description/Backgournd"]
layout_mode = 0
offset_left = 28.0
offset_top = 5.0
offset_right = 489.0
offset_bottom = 390.0
bbcode_enabled = true
text = "[center][font_size=48]DESCRIPTION[/font_size]
[font_size=32]DESCRIPTION[/font_size]"

[node name="salle_sport" type="VBoxContainer" parent="background/ScrollContainer/Batiments"]
custom_minimum_size = Vector2(510, 300)
layout_mode = 2
alignment = 1

[node name="separateur" type="ColorRect" parent="background/ScrollContainer/Batiments/salle_sport"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Name_text" type="RichTextLabel" parent="background/ScrollContainer/Batiments/salle_sport"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("4_o4j7t")
bbcode_enabled = true
text = "[center][font_size=48]Batiment"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="salle_sport" type="TextureRect" parent="background/ScrollContainer/Batiments/salle_sport"]
custom_minimum_size = Vector2(300, 220)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("14_mjjod")
stretch_mode = 6

[node name="Cost_text" type="RichTextLabel" parent="background/ScrollContainer/Batiments/salle_sport"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0.8527348, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_o4j7t")
bbcode_enabled = true
text = "[center][font_size=48]10 000€"
fit_content = true

[node name="Buy_button" type="TextureButton" parent="background/ScrollContainer/Batiments/salle_sport/Cost_text"]
layout_direction = 3
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
scale = Vector2(0.9, 0.9)
size_flags_horizontal = 4
texture_normal = ExtResource("9_jxxyu")
texture_pressed = ExtResource("10_hcqeq")
texture_hover = ExtResource("11_f5aa6")
stretch_mode = 0

[node name="salle_sport_description" type="VBoxContainer" parent="background/ScrollContainer/Batiments"]
custom_minimum_size = Vector2(510, 300)
layout_mode = 2
alignment = 1

[node name="Backgournd" type="Panel" parent="background/ScrollContainer/Batiments/salle_sport_description"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mjjod")
metadata/_edit_use_anchors_ = true

[node name="Description" type="RichTextLabel" parent="background/ScrollContainer/Batiments/salle_sport_description/Backgournd"]
layout_mode = 0
offset_left = 28.0
offset_top = 5.0
offset_right = 489.0
offset_bottom = 390.0
bbcode_enabled = true
text = "[center][font_size=48]DESCRIPTION[/font_size]
[font_size=32]DESCRIPTION[/font_size]"

[node name="salle_repos" type="VBoxContainer" parent="background/ScrollContainer/Batiments"]
custom_minimum_size = Vector2(510, 300)
layout_mode = 2
alignment = 1

[node name="separateur" type="ColorRect" parent="background/ScrollContainer/Batiments/salle_repos"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Name_text" type="RichTextLabel" parent="background/ScrollContainer/Batiments/salle_repos"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("4_o4j7t")
bbcode_enabled = true
text = "[center][font_size=48]Batiment"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="salle_repos" type="TextureRect" parent="background/ScrollContainer/Batiments/salle_repos"]
custom_minimum_size = Vector2(300, 280)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("15_cud4g")
stretch_mode = 6

[node name="Cost_text" type="RichTextLabel" parent="background/ScrollContainer/Batiments/salle_repos"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0.8527348, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_o4j7t")
bbcode_enabled = true
text = "[center][font_size=48]10 000€"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="Buy_button" type="TextureButton" parent="background/ScrollContainer/Batiments/salle_repos/Cost_text"]
layout_direction = 3
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
scale = Vector2(0.9, 0.9)
size_flags_horizontal = 4
texture_normal = ExtResource("9_jxxyu")
texture_pressed = ExtResource("10_hcqeq")
texture_hover = ExtResource("11_f5aa6")
stretch_mode = 0

[node name="salle_repos_description" type="VBoxContainer" parent="background/ScrollContainer/Batiments"]
custom_minimum_size = Vector2(510, 300)
layout_mode = 2
alignment = 1

[node name="Backgournd" type="Panel" parent="background/ScrollContainer/Batiments/salle_repos_description"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mjjod")
metadata/_edit_use_anchors_ = true

[node name="Description" type="RichTextLabel" parent="background/ScrollContainer/Batiments/salle_repos_description/Backgournd"]
layout_mode = 0
offset_left = 28.0
offset_top = 5.0
offset_right = 489.0
offset_bottom = 390.0
bbcode_enabled = true
text = "[center][font_size=48]DESCRIPTION[/font_size]
[font_size=32]DESCRIPTION[/font_size]"

[connection signal="pressed" from="background/Exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="background/ScrollContainer/Batiments/labo_recherche/Cost_text/Buy_button" to="." method="_on_buy_button_pressed_labo_recherche"]
[connection signal="pressed" from="background/ScrollContainer/Batiments/dortoir/Cost_text/Buy_button" to="." method="_on_buy_button_pressed_dortoir"]
[connection signal="pressed" from="background/ScrollContainer/Batiments/cantine/Cost_text/Buy_button" to="." method="_on_buy_button_pressed_cantine"]
[connection signal="pressed" from="background/ScrollContainer/Batiments/observatoire/Cost_text/Buy_button" to="." method="_on_buy_button_pressed_observatoire"]
[connection signal="pressed" from="background/ScrollContainer/Batiments/salle_sport/Cost_text/Buy_button" to="." method="_on_buy_button_pressed_salle_sport"]
[connection signal="pressed" from="background/ScrollContainer/Batiments/salle_repos/Cost_text/Buy_button" to="." method="_on_buy_button_pressed_salle_repos"]
